--- a/src/Lykke.Logs/Lykke.Logs.csproj
+++ b/src/Lykke.Logs/Lykke.Logs.csproj
@@ -16,6 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AsyncFriendlyStackTrace" Version="1.5.0" />
     <PackageReference Include="Lykke.AzureStorage" Version="2.0.1" />
     <PackageReference Include="Lykke.Common" Version="3.0.0" />
     <PackageReference Include="Lykke.SlackNotifications" Version="1.1.0" />
