--- a/src/Lykke.Logs/Lykke.Logs.csproj
+++ b/src/Lykke.Logs/Lykke.Logs.csproj
@@ -28,8 +28,8 @@
   <ItemGroup>
     <PackageReference Include="AsyncFriendlyStackTrace" Version="1.6.0" />
     <PackageReference Include="JetBrains.Annotations" Version="11.1.0" />
-    <PackageReference Include="Lykke.AzureStorage" Version="5.0.1" />
-    <PackageReference Include="Lykke.Common" Version="6.1.0" />
+    <PackageReference Include="Lykke.AzureStorage" Version="8.4.0" />
+    <PackageReference Include="Lykke.Common" Version="7.0.0-beta.1" />
     <PackageReference Include="Lykke.SlackNotifications" Version="1.3.0" />
     <PackageReference Include="SourceLink.Create.CommandLine" Version="2.8.1" PrivateAssets="All" />
   </ItemGroup>
