--- a/src/Lykke.Logs/Lykke.Logs.csproj
+++ b/src/Lykke.Logs/Lykke.Logs.csproj
@@ -31,6 +31,8 @@
     <PackageReference Include="Lykke.AzureStorage" Version="8.4.0" />
     <PackageReference Include="Lykke.Common" Version="7.0.0-beta.1" />
     <PackageReference Include="Lykke.SlackNotifications" Version="1.3.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.2" />
     <PackageReference Include="SourceLink.Create.CommandLine" Version="2.8.1" PrivateAssets="All" />
   </ItemGroup>
 
