Address PR remarks. Change the output format

--- a/tests/ConsoleLoggerRunner/ConsoleLoggerRunner.csproj
+++ b/tests/ConsoleLoggerRunner/ConsoleLoggerRunner.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\Lykke.Logs\Lykke.Logs.csproj" />
+    <ProjectReference Include="..\..\src\Lykke.Logs\Lykke.Logs.csproj" />
   </ItemGroup>
 
 </Project>
