--- a/tests/Lykke.Logs.Tests/Lykke.Logs.Tests.csproj
+++ b/tests/Lykke.Logs.Tests/Lykke.Logs.Tests.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Lykke.AzureStorage" Version="8.4.0" />
+    <PackageReference Include="Lykke.SettingsReader" Version="2.4.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.2" />
     <PackageReference Include="NSubstitute" Version="3.1.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
